@@ -1,4 +1,4 @@
-<!-- $Header: /data/zender/nco_20150216/nco/doc/index.shtml,v 1.674 2012-02-28 23:45:57 zender Exp $
+<!-- $Header: /data/zender/nco_20150216/nco/doc/index.shtml,v 1.675 2012-02-29 08:05:32 zender Exp $
 Purpose: NCO homepage
 
 URL:
@@ -606,6 +606,7 @@ World peace?
 <li><b>NCO 4.1.0</b>: (<i>In Progress, features already in beta include the following</i>)
 MD5 digests;
 netCDF4 groups;
+<b>ncrename</b> chmods;
 Stride works with DAP?;
 <li><b>NCO 4.0.9</b>: 
 Fix over-zealous <tt>ncap2</tt> packing;
