@@ -1,3 +1,7 @@
+2012-02-28  Charlie Zender  <zender@uci.edu>
+
+	* Implement chmod so ncrename succeeds when output file is specified and input file is read-only
+
 2012-02-23  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.1.0 release procedure:
